--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inflorescences-quinoa",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "Site web d'Inflorescense, producteur de Quinoa en Normandie",
   "main": "index.js",
   "repository": "https://github.com/InflorescensesQuinoa/siteweb",
@@ -14,9 +14,10 @@
     "publish": "vuepress-vite build docs && git push"
   },
   "devDependencies": {
-    "vuepress-vite": "2.0.0-beta.66"
+    "vuepress-vite": "2.0.0-beta.67"
   },
   "dependencies": {
-    "vuepress-theme-hope": "2.0.0-beta.234"
+    "mathjax-full": "^3.2.2",
+    "vuepress-theme-hope": "2.0.0-beta.242"
   }
 }
