--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inflorescences-quinoa",
-  "version": "1.0.20",
+  "version": "1.0.21",
   "description": "Site web d'Inflorescense, producteur de Quinoa en Normandie",
   "main": "index.js",
   "repository": "https://github.com/InflorescensesQuinoa/siteweb",
@@ -15,14 +15,14 @@
   },
   "packageManager": "yarn@4.1.0",
   "dependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.7",
-    "@vuepress/plugin-blog": "2.0.0-rc.14",
-    "@vuepress/plugin-feed": "2.0.0-rc.12",
-    "@vuepress/plugin-redirect": "2.0.0-rc.12",
-    "@vuepress/plugin-seo": "2.0.0-rc.14",
-    "@vuepress/plugin-sitemap": "2.0.0-rc.14",
-    "vuepress": "2.0.0-rc.7",
-    "vuepress-plugin-pwa2": "2.0.0-rc.23",
-    "vuepress-theme-hope": "2.0.0-rc.23"
+    "@vuepress/bundler-vite": "2.0.0-rc.8",
+    "@vuepress/plugin-blog": "2.0.0-rc.15",
+    "@vuepress/plugin-feed": "2.0.0-rc.17",
+    "@vuepress/plugin-pwa": "2.0.0-rc.17",
+    "@vuepress/plugin-redirect": "2.0.0-rc.17",
+    "@vuepress/plugin-seo": "2.0.0-rc.15",
+    "@vuepress/plugin-sitemap": "2.0.0-rc.15",
+    "vuepress": "2.0.0-rc.8",
+    "vuepress-theme-hope": "2.0.0-rc.26"
   }
 }
